# CAMSHAP

./: LICENSE  Makefile.am  README.md  camshap.cc  configure.ac  pycamshap.py  run_config.sh
config/: sst_core_check_install.m4
json/: hw.json  sw.json
log/churn_f100b100_v10_p0/0/: hw_0.json  sw_0.json
log/churn_f100b100_v10_p0/0/raw/: Output_0.csv  Output_1.csv  Output_10.csv  (+19 more)
log/eye_f100b100_v10000_p0/0/: sw_0.json
log/gesture_f100b100_v10000_p0/0/: sw_0.json
log/mortality_f100b100_v10_p0/0/: sw_0.json
log/telco_f100b100_v100_p0/0/: sw_0.json
model/churn/: cpu_latency.npy  cpu_throughput.npy  gpu_latency.npy  gpu_throughput.npy  test.pkl  tree_size.npy  xgboost_tree800_depth10_trial0.npz
model/eye/: cpu_latency.npy  cpu_throughput.npy  gpu_latency.npy  gpu_throughput.npy  test.pkl  tree_size.npy
model/gesture/: cpu_latency.npy  cpu_throughput.npy  gpu_latency.npy  gpu_throughput.npy  test.pkl  tree_size.npy
model/mortality/: cpu_latency.npy  cpu_throughput.npy  gpu_latency.npy  gpu_throughput.npy  test.pkl  tree_size.npy
model/telco/: cpu_latency.npy  cpu_throughput.npy  gpu_latency.npy  gpu_throughput.npy  test.pkl  tree_size.npy  xgboost_tree900_depth10_trial2.npz
plot/: __init__.py  constant.py  plot_comparison_figure.ipynb  plot_performance_figures.ipynb
src/: acam.cc  acam.h  control_core.cc  control_core.h  control_node.cc  control_node.h  control_tile.cc  control_tile.h  data_queue.h  event.h  instruction.h  mmr.cc  mmr.h  mpe.cc  mpe.h  router.cc  router.h
tests/: __init__.py  configure.py  noc.py  test_camshap.py  util.py
(+88 files in other folders)
